--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
     </head>
         <body>
             <h1>wikiHown't</h1>
-            <p>Instructions you annot trust.</p>
+            <p>Instructions you cannot trust.</p>
         
             <table>
                 <tr>
-                  <th>Place</th>
-                  <th>Contact</th>
-                  <th>Country</th>
+                  <th>Name</th>
+                  <th>Age</th>
+                  <th>Competence</th>
                 </tr>
                 <tr>
-                  <td>Alfreds Futterkiste</td>
-                  <td>Maria Anders</td>
-                  <td>Germany</td>
+                  <td>Gregor Samsa</td>
+                  <td>2,100,000</td>
+                  <td>Low</td>
                 </tr>
                 <tr>
-                  <td>Centro comercial Moctezuma</td>
-                  <td>Francisco Chang</td>
-                  <td>Mexico</td>
+                  <td>Carl Jr</td>
+                  <td>81</td>
+                  <td>Very Low</td>
                 </tr>
+                <tr>
+                    <td>Unknown</td>
+                    <td>8</td>
+                    <td>Average</td>
+                  </tr>
               </table> 
         
         </body>
