--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                   </tr>
             </table>
               
-            <a href="https://izbicki.me">Shoutout to Mike</a>
+           <p> <a href="https://izbicki.me">Shoutout to Mike</a> </p>
+           <p>
+            <a href="https://ben-smith23.github.io/wikihownt.github.io/testy">How Not To Fall</a> 
+           </p>
         
         </body>
 </html>
