--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </table>
               
            <p> <a href="https://izbicki.me">Shoutout to Mike</a> </p>
+           <p> <a href="(https://github.com/mikeizbicki/cmc-csci040">And my hacking class.</a> </p>
            <p>
             <a href="https://ben-smith23.github.io/wikihownt.github.io/testy">How Not To Fall</a> 
            </p>
