--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
              <li> Shoutout to Jade</li>
              <li> Shoutout Someone</li>
          </ul>
+         <p>
+            How Not To Celebrate A Birthday
+         </p>
     </body>
 </html>
