--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
            h1 {
             background-color: rgb(90, 202, 90);
             text-align: center;
-            font-size: 60px;
+            font-size: 80px;
            }
            .wiki{
             color: rgb(45, 51, 45);
@@ -19,11 +19,12 @@
             li{display: inline-block;
         width: 20%;
         font-size: 30px;
-        text-align: center;}  
+        text-align: center;} 
+        p {background-color: aqua;} 
 </style>
     </head>
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
-        <h1 style="margin-bottom: 0px;"><span class=wiki>wiki</span><span class=hownt>Hown't</span></h1>
+        <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;"><span class=wiki>wiki</span><span class=hownt>Hown't</span></h1>
         <ul style="margin-top: 0px;margin-bottom: 0px;;padding-top: 20px;;padding-bottom: 20px;">
              <li> <a href="https://izbicki.me">Shoutout to Mike</a></li> 
              <li> <a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></li>
@@ -33,5 +34,12 @@
          <p>
             How Not To Celebrate A Birthday
          </p>
+<p>
+
+</p>
+<p>
+    
+</p>
+         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
     </body>
 </html>
