--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
     <head>
         <style>
+            <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X7ZDD4JTSM');
+</script>
            h1 {
             background-color: rgb(90, 202, 90);
             text-align: center;
@@ -19,7 +28,7 @@
             li{display: inline-block;
         width: 20%;
         font-size: 30px;
-        text-align: center;} 
+        text-justify: center;} 
         p {background-color: aqua;} 
 </style>
     </head>
