--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <html>
     <head>
         <style>
-            <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-X7ZDD4JTSM');
-</script>
+         
            h1 {
             background-color: rgb(90, 202, 90);
             text-align: center;
@@ -45,6 +37,18 @@
          <p>
             How Not To Celebrate A Birthday
          </p>
+
+         <p>Buy me a coffee!!!</p>
+
+            <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X7ZDD4JTSM');
+</script>
 
          <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
     </body>
