--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
         width: 20%;
         font-size: 30px;
         text-justify: center;} 
-        p {background-color: aqua;} 
+        p {background-color: aqua;
+        padding-left: 20px;} 
 </style>
     </head>
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
         <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io%2Fwikihownt.github.io%2F&width=62&layout=box_count&action=like&size=small&share=true&height=65&appId" width="62" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             <span class=wiki>wiki</span><span class=hownt>Hown't</span></h1>
-        <ul style="margin-top: 0px;margin-bottom: 0px;;padding-top: 20px;;padding-bottom: 20px;">
+        <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
              <li> <a href="https://izbicki.me">Shoutout to Mike</a></li> 
              <li> <a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></li>
              <li> Shoutout to Jade</li>
@@ -38,7 +39,7 @@
             How Not To Celebrate A Birthday
          </p>
 
-         <p>Buy me a coffee!!!</p>
+         <h3>Buy me a coffee!!!</h3>
 
             <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
@@ -50,6 +51,6 @@
   gtag('config', 'G-X7ZDD4JTSM');
 </script>
 
-         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-    </body>
+        <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+    </body></p>
 </html>
