--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         width: 20%;
         font-size: 30px;
         text-justify: center;} 
-        p {background-color: aqua;
+        p {
         padding-left: 20px;} 
+        .coffee {text-align: right;}
 </style>
     </head>
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
@@ -39,7 +40,30 @@
             How Not To Celebrate A Birthday
          </p>
 
-         <h3>Buy me a coffee!!!</h3>
+         <h3><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
+         <table>
+            <caption>Top Coffee Contributors</caption>
+            <tr>
+              <th>Name</th>
+              <th>Country</th>
+              <th>Coffees Bought</th>
+            </tr>
+            <tr>
+              <td>Gregor Samsa</td>
+              <td>Czechia</td>
+              <td class=coffee>2,141,407</td>
+            </tr>
+            <tr>
+              <td>Mom</td>
+              <td>USA</td>
+              <td class=coffee>719</td>
+            </tr>
+            <tr>
+                <td>Anonymous</td>
+                <td>Jezero Crater</td>
+                <td class=coffee>6</td>
+              </tr>
+        </table>
 
             <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
