--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
         <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
              <li> <a href="https://izbicki.me">Shoutout to Mike</a></li> 
              <li> <a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></li>
-             <li> Shoutout to Jade</li>
+             <li> Shoutout Someone</li>
              <li> Shoutout Someone</li>
          </ul>
          <p>
             How Not To Celebrate A Birthday
          </p>
+         <img width=80% title="eye see u" alt="this is an eye" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
 
-         <h3><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
-         <table>
+         <h3 style="margin-left: 20px;"><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
+         <table style="margin-left: 20px;">
             <caption>Top Coffee Contributors</caption>
             <tr>
               <th>Name</th>
