--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
          <p>
             How Not To Celebrate A Birthday
          </p>
-         <img width=80% title="eye see u" alt="this is an eye" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+         <figure>
+            <img margin-left=20px width=40% title="Gordy!!!" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+            <figcaption>How Not To Celebrate A Birthday</figcaption>
+        </figure>
 
          <h3 style="margin-left: 20px;"><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
          <table style="margin-left: 20px;">
