--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         p {
         padding-left: 20px;} 
         .coffee {text-align: right;}
+        figcaption {
+            font-size: 30px;
+            color: darkgreen;
+        }
+        img {
+            border: 5px solid;
+        }
 </style>
     </head>
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
@@ -36,9 +43,7 @@
              <li> Shoutout Someone</li>
              <li> Shoutout Someone</li>
          </ul>
-         <p>
-            How Not To Celebrate A Birthday
-         </p>
+         
          <figure>
             <img margin-left=20px width=40% title="Gordy!!!" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
             <figcaption>How Not To Celebrate A Birthday</figcaption>
