--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         img {
             border: 5px solid;
         }
+        div {
+            background-color: rgba(181, 255, 214, 0.568);
+        }
 </style>
     </head>
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
@@ -44,10 +47,18 @@
              <li> Shoutout Someone</li>
          </ul>
          
+         <div style="margin-top: 0px;padding-top: 50px; padding-bottom: 50px;padding-left: 50px;">
          <figure>
-            <img margin-left=20px width=40% title="Gordy!!!" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+            <img margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
             <figcaption>How Not To Celebrate A Birthday</figcaption>
         </figure>
+
+        <figure>
+            <img margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+            <figcaption>How Not To Celebrate A Birthday</figcaption>
+        </figure>
+
+        </div>
 
          <h3 style="margin-left: 20px;"><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
          <table style="margin-left: 20px;">
