--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html lang='en'>
+
 <html>
     <head>
+        <title>
+            wikiHown't
+        </title>
+    
+        <meta name="description" content="Instructions you cannot trust">
         <style>
          
            h1 {
@@ -36,6 +44,7 @@
         }
 </style>
     </head>
+
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
         <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io%2Fwikihownt.github.io%2F&width=62&layout=box_count&action=like&size=small&share=true&height=65&appId" width="62" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
