--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </figure>
 
         <figure>
-            <img margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
-            <figcaption>How Not To Celebrate A Birthday</figcaption>
+            <img margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
+            <figcaption>How Not To Debate Politics With Your Cousin</figcaption>
         </figure>
 
         </div>
