--- a/index.html
+++ b/index.html
@@ -33,12 +33,19 @@
             font-size: 30px;
             color: darkgreen;
         }
-        img {
+        .artimg {
             border: 5px solid;
+
+width: 500px; 
+height: 500px; 
+object-fit: cover;
+object-position: 50% 50%; 
+
         }
         div {
             background-color: rgba(181, 255, 214, 0.568);
         }
+        
 </style>
     </head>
 
@@ -55,12 +62,12 @@
          
          <div style="margin-top: 0px;padding-top: 50px; padding-bottom: 50px;padding-left: 50px;">
          <figure>
-            <img margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+            <img class=artimg margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
             <figcaption>How Not To Celebrate A Birthday</figcaption>
         </figure>
 
         <figure>
-            <img margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
+            <img class=artimg margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
             <figcaption>How Not To Debate Politics With Your Cousin</figcaption>
         </figure>
 
