--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
            ul {
             background-color: rgb(199, 241, 187);
            }
-           li:hover{background: rgb(39, 92, 18);}
+           .selected:hover{background: rgb(122, 129, 119);}
             li{display: inline-block;
         width: 20%;
         font-size: 30px;
-        text-justify: center;} 
+        text-align: right;} 
         p {
         padding-left: 20px;} 
         .coffee {text-align: right;}
@@ -54,19 +54,20 @@ object-position: 50% 50%;
            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io%2Fwikihownt.github.io%2F&width=62&layout=box_count&action=like&size=small&share=true&height=65&appId" width="62" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             <span class=wiki>wiki</span><span class=hownt>Hown't</span></h1>
         <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
-             <li> <a href="https://izbicki.me">Shoutout to Mike</a></li> 
-             <li> <a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></li>
-             <li> Shoutout Someone</li>
-             <li> Shoutout Someone</li>
+             <li> <span class=selected> <a href="https://izbicki.me">Shoutout to Mike</a></span></li> 
+             <li> <span class=selected><a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></span></li>
+             <li> <span class=selected>Shoutout Someone</span></li>
+             <li> <span class=selected>Shoutout Someone</span></li>
          </ul>
          
          <div style="margin-top: 0px;padding-top: 50px; padding-bottom: 50px;padding-left: 50px;">
          <figure>
+            <a href="https://izbicki.me">
             <img class=artimg margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
-            <figcaption>How Not To Celebrate A Birthday</figcaption>
+            <figcaption>How Not To Celebrate A Birthday</figcaption></a>
         </figure>
 
-        <figure>
+        <figure style="padding-top: 50px;">
             <img class=artimg margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
             <figcaption>How Not To Debate Politics With Your Cousin</figcaption>
         </figure>
