--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
         }
         .artimg {
             border: 5px solid;
+            width: 500px; 
+            height: 500px; 
+            object-fit: cover;
+            object-position: 50% 50%; }
 
-width: 500px; 
-height: 500px; 
-object-fit: cover;
-object-position: 50% 50%; 
-
-        }
         div {
             background-color: rgba(181, 255, 214, 0.568);
         }
