--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          
          <div style="margin-top: 0px;padding-top: 50px; padding-bottom: 50px;padding-left: 50px;">
          <figure>
-            <a href="https://izbicki.me">
+            <a href="https://ben-smith23.github.io/wikihownt.github.io/birthday.html">
             <img class=artimg margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
             <figcaption>How Not To Celebrate A Birthday</figcaption></a>
         </figure>
