--- a/birthday.html
+++ b/birthday.html
@@ -18,6 +18,10 @@
              <li> <span class=selected>Shoutout Someone</span></li>
              <li> <span class=selected>Shoutout Someone</span></li>
          </ul>
+
+         <p>
+            Politically communicating political topics with your cousin over matters related to politics in a political way is a politically fraught thing to do in today's hyper-politicized world where people politic politics all day long. Needless to say, it is political.
+         </p>
          
          <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
