--- a/politics.html
+++ b/politics.html
@@ -19,6 +19,10 @@
              <li> <span class=selected>Shoutout Someone</span></li>
          </ul>
 
+         <p>
+            Politically communicating political topics with your cousin over matters related to politics in a political way is a politically fraught thing to do in today's hyper-politicized world where people politic politics all day long. Needless to say, it is political.
+         </p>
+
          <b>Phone Numbers</b>
          <p>(526) 634-1858
             <br>(713) 768-9819
