--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
              <li> <span class=selected><a href="https://izbicki.me">Shoutout to Mike</a></span></li> 
              <li> <span class=selected><a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></span></li>
-             <li> <span class=selected><a href="https://jadesaunders.github.io">Jade's Site</a></span></li>
+             <li> <span class=selected><a href="https://jadersaunders.github.io">Jade's Site</a></span></li>
              <li> <span class=selected><a href="https://cyrusg645.github.io">Cyrus' Site</a></span></li>
          </ul>
          
