--- a/birthday.html
+++ b/birthday.html
@@ -19,9 +19,9 @@
              <li> <span class=selected>Shoutout Someone</span></li>
          </ul>
 
-         <p>
-            Politically communicating political topics with your cousin over matters related to politics in a political way is a politically fraught thing to do in today's hyper-politicized world where people politic politics all day long. Needless to say, it is political.
-         </p>
+         <figure >
+            <img class=chimp margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+        </figure>
          
          <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
