--- a/birthday.html
+++ b/birthday.html
@@ -4,7 +4,7 @@
             wikiHown't - Birthday
         </title>
     
-        <meta name="description" content="Instructions you cannot trust">
+        <meta name="description" content="Instructions on how not to celebrate a birthday.">
         <link rel="stylesheet" href="mystyle.css">
     </head>
 
@@ -22,6 +22,14 @@
          <figure >
             <img class=chimp margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
         </figure>
+
+        <p>
+            Happy birthday to you.  Happy birthday to you.  Happy birthday dear [insert name here]. Happy birthday to you. 
+        </p>
+
+        <p>
+            It's not my birthday. 
+        </p>
          
          <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
