--- a/politics.html
+++ b/politics.html
@@ -1,7 +1,7 @@
 <html lang='en'>
     <head>
         <title>
-            wikiHown't - Birthday
+            wikiHown't - Politics
         </title>
     
         <meta name="description" content="Instructions you cannot trust">
@@ -21,6 +21,10 @@
 
          <p>
             Politically communicating political topics with your cousin over matters related to politics in a political way is a politically fraught thing to do in today's hyper-politicized world where people politic politics all day long. Needless to say, it is political.
+         </p>
+
+         <p>
+
          </p>
 
          <b>Phone Numbers</b>
