--- a/birthday.html
+++ b/birthday.html
@@ -11,7 +11,7 @@
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
         <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io%2Fwikihownt.github.io%2F&width=62&layout=box_count&action=like&size=small&share=true&height=65&appId" width="62" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-            <span class=wiki>wiki</span><span class=hownt>Hown't</span></h1>
+            <a href="https://ben-smith23.github.io/wikihownt.github.io/"><span class=wiki>wiki</span><span class=hownt>Hown't</span></a></h1>
         <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
              <li> <span class=selected><a href="https://izbicki.me">Shoutout to Mike</a></span></li> 
              <li> <span class=selected><a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></span></li>
