--- a/birthday.html
+++ b/birthday.html
@@ -30,6 +30,12 @@
         <p>
             It's not my birthday. 
         </p>
+
+        <figure style="padding-top: 50px;">
+            <a href="https://ben-smith23.github.io/wikihownt.github.io/politics.html">
+            <img id=politics margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
+            <figcaption id=pcap>See also: How Not To Debate Politics With Your Cousin</figcaption>
+        </figure>
          
          <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
