--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
          </ul>
 
          <div>
-            <h3>
+            <h3 style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;padding-left: 20px;">
               About Me
             </h3>
             <p>
               <a href="https://zombo.com">They</a> say failure is the quickest way to learn. So in order to improve the world's learning, I have taken it upon myself to help people fail more. Personally, I try to fail at everything I do. What can I say? I'm a failurer. A failinator. And that's a title I wear with pride.
             </p> 
             
-            <h3>
+            <h3 style="padding-left: 20px;">
               About You
             </h3>
             <p>
               They say failure is the quickest way to learn. So in order to improve the world's learning, you have taken it upon yourself to help people fail more. You fail at everything you do. What can you say? You're a failurer. A failinator. And that's a title you wear with pride.
             </p>
 
-            <h3>
+            <h3 style="padding-left: 20px;">
              What to do next?
             </h3>
-            <p>
+            <p style="margin-bottom: 0px;">
               Idk, I'm good with whatever.
             </p>
          </div>
