--- a/politics.html
+++ b/politics.html
@@ -27,57 +27,70 @@
 
          </p>
 
-         <b>Phone Numbers</b>
-         <p>(526) 634-1858
-            <br>(713) 768-9819
-            <br>(963) 617-3946
-            <br>(217) 845-2227
-            <br>(972) 314-1982
-            <br>(214) 927-0611
-            <br>(377) 698-0167
-            <br>(628) 951-8108
-            <br>(764) 604-5437
-            <br>(897) 594-7823
-            <br>(557) 692-2512
-            <br>(861) 343-9032
-            <br>(865) 308-7610
-            <br>(648) 784-4777
-            <br>(589) 213-2678
-            <br>(749) 602-0861
-            <br>(468) 432-6784
-            <br>(503) 852-8922
-            <br>(452) 563-4667
-            <br>(354) 346-0250
-            <br>(751) 775-8842
-            <br>(522) 995-3891
-            <br>(471) 376-2715
-            <br>(428) 611-3610
-            <br>(680) 316-3867
-            <br>(803) 344-1288
-            <br>(470) 496-9594
-            <br>(894) 851-0360
-            <br>(534) 796-3116
-            <br>(589) 844-7394
-            <br>(282) 963-0319
-            <br>(721) 806-0980
-            <br>(738) 479-9384
-            <br>(804) 512-9520
-            <br>(454) 975-9270
-            <br>(864) 278-6495
-            <br>(473) 677-7229
-            <br>(428) 748-1479
-            <br>(427) 851-2899
-            <br>(863) 504-1462
-            <br>(382) 868-7739
-            <br>(911) 340-9389
-            <br>(499) 412-2476
-            <br>(832) 602-4472
-            <br>(672) 533-3032
-            <br>(570) 523-8761
-            <br>(772) 205-7594
-            <br>(973) 371-9787
-            <br>(926) 265-2730
-            <br>(482) 338-6827</p>
+         <div>
+            <b>Phone Numbers</b>
+                <p>(526) 634-1858
+                    <br>(713) 768-9819
+                    <br>(963) 617-3946
+                    <br>(217) 845-2227
+                    <br>(972) 314-1982
+                    <br>(214) 927-0611
+                    <br>(377) 698-0167
+                    <br>(628) 951-8108
+                    <br>(764) 604-5437
+                    <br>(897) 594-7823
+                    <br>(557) 692-2512
+                    <br>(861) 343-9032
+                    <br>(865) 308-7610
+                    <br>(648) 784-4777
+                    <br>(589) 213-2678
+                    <br>(749) 602-0861
+                    <br>(468) 432-6784
+                    <br>(503) 852-8922
+                    <br>(452) 563-4667
+                    <br>(354) 346-0250
+                    <br>(751) 775-8842
+                    <br>(522) 995-3891
+                    <br>(471) 376-2715
+                    <br>(428) 611-3610
+                    <br>(680) 316-3867
+                    <br>(803) 344-1288
+                    <br>(470) 496-9594
+                    <br>(894) 851-0360
+                    <br>(534) 796-3116
+                    <br>(589) 844-7394
+                    <br>(282) 963-0319
+                    <br>(721) 806-0980
+                    <br>(738) 479-9384
+                    <br>(804) 512-9520
+                    <br>(454) 975-9270
+                    <br>(864) 278-6495
+                    <br>(473) 677-7229
+                    <br>(428) 748-1479
+                    <br>(427) 851-2899
+                    <br>(863) 504-1462
+                    <br>(382) 868-7739
+                    <br>(911) 340-9389
+                    <br>(499) 412-2476
+                    <br>(832) 602-4472
+                    <br>(672) 533-3032
+                    <br>(570) 523-8761
+                    <br>(772) 205-7594
+                    <br>(973) 371-9787
+                    <br>(926) 265-2730
+                    <br>(482) 338-6827
+                </p>
+        </div>
+
+                        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X7ZDD4JTSM');
+</script>
          
          <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
