--- a/birthday.html
+++ b/birthday.html
@@ -10,7 +10,7 @@
 
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
         <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
-           <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io%2Fwikihownt.github.io%2F&width=62&layout=box_count&action=like&size=small&share=true&height=65&appId" width="62" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io&width=74&layout=box_count&action=like&size=large&share=false&height=65&appId" width="74" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>           <a href="https://ben-smith23.github.io/wikihownt.github.io/"><span class=wiki>wiki</span><span class=hownt>Hown't</span></a></h1>
             <a href="https://ben-smith23.github.io/wikihownt.github.io/"><span class=wiki>wiki</span><span class=hownt>Hown't</span></a></h1>
         <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
              <li> <span class=selected><a href="https://izbicki.me">Shoutout to Mike</a></span></li> 
@@ -37,6 +37,16 @@
             <figcaption id=pcap>See also: How Not To Debate Politics With Your Cousin</figcaption>
         </figure>
          
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+            
+              gtag('config', 'G-X7ZDD4JTSM');
+            </script>
+
          <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
           </body>
