--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <figure style="padding-top: 50px;">
             <a href="https://ben-smith23.github.io/wikihownt.github.io/politics.html">
-            <img class=artimg margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
+            <img class=artimg margin-left=20px width=40% title="My Cousin's LinkedIn Profile Pic" alt="This is a picture of my cousin." src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
             <figcaption>How Not To Debate Politics With Your Cousin</figcaption>
         </figure>
 
