--- a/politics.html
+++ b/politics.html
@@ -29,7 +29,7 @@
 
          <figure style="padding-top: 50px;">
             <a href="https://ben-smith23.github.io/wikihownt.github.io/birthday.html">
-            <img id=politics margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
+            <img id=politics margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
             <figcaption id=pcap>See also: How Not To Celebrate A Birthday</figcaption>
         </figure>
 
