--- a/politics.html
+++ b/politics.html
@@ -19,6 +19,10 @@
              <li> <span class=selected>Shoutout Someone</span></li>
          </ul>
 
+         <figure >
+            <img class=will margin-left=20px width=40% title="My Cousin's LinkedIn Profile Pic" alt="This is a picture of my cousin." src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
+        </figure>
+
          <p>
             Politically communicating political topics with your cousin over matters related to politics in a political way is a politically fraught thing to do in today's hyper-politicized world where people politic politics all day long. Needless to say, it is political.
          </p>
