--- a/politics.html
+++ b/politics.html
@@ -9,6 +9,8 @@
     </head>
 
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
+        
+        <div>
         <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
             <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io&width=74&layout=box_count&action=like&size=large&share=false&height=65&appId" width="74" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
            <a href="https://ben-smith23.github.io/wikihownt.github.io/"><span class=wiki>wiki</span><span class=hownt>Hown't</span></a></h1>
@@ -18,26 +20,29 @@
              <li> <span class=selected>Shoutout Someone</span></li>
              <li> <span class=selected>Shoutout Someone</span></li>
          </ul>
+        </div>
 
-        <h2><span class=head>How Not To Debate Politics With Your Cousin</span></h2>
+        <div>
+        <h2 style="margin-top: 0px;padding-top: 10px;">How Not To Debate Politics With Your Cousin</h2>
 
-         <figure >
+         <figure style="margin-bottom: 0px;padding-bottom: 20px;">
             <img class=will margin-left=20px width=40% title="My Cousin's LinkedIn Profile Pic" alt="This is a picture of my cousin." src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
         </figure>
+        </div>
 
-         <p>
+        <div style="margin-top: 0px;">
+         <p style="margin-top: 0px;">
             Politically communicating political topics with your cousin over matters related to politics in a political way is a politically fraught thing to do in today's hyper-politicized world where people politic politics all day long. Needless to say, it is political.
          </p>
 
          <p>
-
+        A few people have thought about politics before. Some have even written books on <span class=big>politics</span>. Once I even heard a podcast where they talked about politics.
          </p>
 
-         <figure style="padding-top: 50px;">
-            <a href="https://ben-smith23.github.io/wikihownt.github.io/birthday.html">
-            <img id=politics margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
-            <figcaption id=pcap>See also: How Not To Celebrate A Birthday</figcaption>
-        </figure>
+         <p style="padding-bottom: 50px;margin-bottom: 0px;">
+        When my no-good, low-life cousin who perpetually lives at the top of the Dunning-Krueger curve tries to discuss politics with <i>ME</i>, an infallible, super genius, public policy major, I tell him I am far too important to have time to converse with imbeciles. Then I kindly direct him to the 4chan threads where I do all my research.
+        </p>
+        </div>
 
          <div>
             <b>Phone Numbers</b>
@@ -93,6 +98,12 @@
                     <br>(482) 338-6827
                 </p>
         </div>
+
+        <figure style="padding-top: 50px;">
+            <a href="https://ben-smith23.github.io/wikihownt.github.io/birthday.html">
+            <img id=politics margin-left=20px width=40% title="https://www.empireonline.com/movies/news/jordan-peele-nope-gordy-explained-feelings-of-rage-exclusive/" alt="Gordy The Chimp Is An Animal" src="https://images.bauerhosting.com/empire/2022/08/gordy.jpg?q=80&w=1400&ar=16:9&fit=crop&crop=top">
+            <figcaption id=pcap>See also: How Not To Celebrate A Birthday</figcaption>
+        </figure>
 
                         <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
