--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     </head>
 
     <body style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
-        <h1 class=header style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
-          <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io&width=74&layout=box_count&action=like&size=large&share=false&height=65&appId" width="74" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>           <a href="https://ben-smith23.github.io/wikihownt.github.io/"><span class=wiki>wiki</span><span class=hownt>Hown't</span></a></h1>
-           <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
-             <li> <span class=selected><a href="https://izbicki.me">Shoutout to Mike</a></span></li> 
-             <li> <span class=selected><a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></span></li>
-             <li> <span class=selected><a href="https://jadersaunders.github.io">Jade's Site</a></span></li>
-             <li> <span class=selected><a href="https://cyrusg645.github.io">Cyrus' Site</a></span></li>
-         </ul>
+        
+        <div>
+          <h1 style="margin-bottom: 0px;padding-top: 20px;padding-bottom: 20px;">
+            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fben-smith23.github.io&width=74&layout=box_count&action=like&size=large&share=false&height=65&appId" width="74" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>           <a href="https://ben-smith23.github.io/wikihownt.github.io/"><span class=wiki>wiki</span><span class=hownt>Hown't</span></a></h1>
+            <ul style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;;padding-bottom: 20px;">
+              <li> <span class=selected><a href="https://izbicki.me">Shoutout to Mike</a></span></li> 
+              <li> <span class=selected><a href="https://github.com/mikeizbicki/cmc-csci040">My Hacking Class</a></span></li>
+              <li> <span class=selected><a href="https://jadersaunders.github.io">Jade's Site</a></span></li>
+              <li> <span class=selected><a href="https://cyrusg645.github.io">Cyrus' Site</a></span></li>
+          </ul>
+         </div>
 
          <div>
             <h3 style="margin-top: 0px;margin-bottom: 0px;padding-top: 20px;padding-left: 20px;">
@@ -53,9 +56,9 @@
             <img class=artimg margin-left=20px width=40% title="My Cousin's LinkedIn Profile Pic" alt="This is a picture of my cousin." src="https://media-exp1.licdn.com/dms/image/C4D03AQEUn4k8cQ7iNQ/profile-displayphoto-shrink_200_200/0/1645811730278?e=2147483647&v=beta&t=rDabUbU2-IbROt5NueSyBms0hJS5qEZFDawS2MFMwbU">
             <figcaption>How Not To Debate Politics With Your Cousin</figcaption>
         </figure>
-
         </div>
 
+        <div>
          <h3 style="margin-left: 20px;"><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
          <table style="margin-left: 20px;">
             <caption>Top Coffee Contributors</caption>
@@ -80,6 +83,7 @@
                 <td class=coffee>6</td>
               </tr>
         </table>
+      </div>
 
         <figure style="margin-left: 1000px;">
           <img  id=knitting width=10% title="https://www.pexels.com/photo/smiling-ethnic-artisan-knitting-in-living-room-7585757/" alt="This is a woman kntting" src="https://images.pexels.com/photos/7585757/pexels-photo-7585757.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
