--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div>
-         <h3 style="margin-left: 20px;"><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
+         <h3 style="margin-left: 20px;margin-top: 0px;"><a href="https://pastebin.com/yEiTHhvF">Buy me a coffee!!!</a></h3>
          <table style="margin-left: 20px;">
             <caption>Top Coffee Contributors</caption>
             <tr>
@@ -83,12 +83,13 @@
                 <td class=coffee>6</td>
               </tr>
         </table>
-      </div>
+    
 
         <figure style="margin-left: 1000px;">
           <img  id=knitting width=10% title="https://www.pexels.com/photo/smiling-ethnic-artisan-knitting-in-living-room-7585757/" alt="This is a woman kntting" src="https://images.pexels.com/photos/7585757/pexels-photo-7585757.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
           <figcaption>Enjoy this royalty free image of a woman knitting.</figcaption>
         </figure>
+      </div>
 
             <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7ZDD4JTSM"></script>
